<resources>
    <string name="aclin_empty">暂无数据</string>
    <string name="aclin_init_failure">加载失败，点击重试</string>
    <string name="aclin_init_loading">加载中&#8230;</string>
    <string name="aclin_more_end">没有更多</string>
    <string name="aclin_more_failure">加载失败，点击重试</string>
    <string name="aclin_more_loading">加载中&#8230;</string>
    <string name="aclin_permission_to_setting">去设置</string>
    <string name="aclin_permission_request_title">请求权限</string>
    <string name="aclin_permission_failure_title">请求权限失败</string>
    <string name="aclin_image_picker_gallery_title">选择图片</string>
    <string name="aclin_image_picker_gallery_permission_request">选择图片需要读写文件的权限</string>
    <string name="aclin_image_picker_gallery_permission_failure">未获得读写文件的权限，你可以从应用设置中选择授权后使用选择图片功能</string>
    <string name="aclin_image_picker_gallery_bucket_all">全部图片</string>
    <string name="aclin_image_picker_gallery_bucket_select">已选择图片</string>
    <string name="aclin_image_picker_gallery_select_limit_max">选择的图片数量不能超过%d张</string>
    <string name="aclin_image_picker_gallery_bucket_count">共%d张</string>
    <string name="aclin_image_picker_gallery_menu_album">相册</string>
    <string name="aclin_image_picker_gallery_menu_sure">确认(%d/%d)</string>
    <string name="aclin_image_picker_gallery_preview">预览</string>
    <string name="aclin_logger_menu_select_all">全选</string>
    <string name="aclin_logger_menu_select_tip">请选择需要删除的日志文件</string>
    <string name="aclin_logger_menu_delete">删除</string>
    <string name="aclin_logger_menu_delete_tip">确定要删除已选择的日志文件？</string>
    <string name="aclin_image_crop_title">裁剪图片</string>
    <string name="aclin_image_crop_ratio_1_1">1:1</string>
    <string name="aclin_image_crop_ratio_4_3">4:3</string>
    <string name="aclin_image_crop_ratio_3_4">3:4</string>
    <string name="aclin_image_crop_ratio_16_9">16:9</string>
    <string name="aclin_image_crop_ratio_9_16">9:16</string>
    <string name="aclin_image_crop_ratio_0_0">自定义</string>
    <string name="aclin_image_crop_ratio_custom_0_0">自定义(%s)</string>
    <string name="aclin_image_crop_ratio_custom_title">自定义宽高比</string>
</resources>
