<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="path"
            type="String" />

        <variable
            name="customRatio"
            type="String" />

        <variable
            name="fixed"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.luoyemyy.aclin.image.crop.CropImageView
            android:id="@+id/cropView"
            aclin_image_url="@{path}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@id/layoutOp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/layoutOp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:scrollbars="none"
            android:visibility="@{fixed?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/recyclerView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:visibility="gone">

            <LinearLayout
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chip11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:padding="16dp"
                    android:text="@string/aclin_image_crop_ratio_1_1" />

                <TextView
                    android:id="@+id/chip43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/aclin_image_crop_ratio_4_3" />

                <TextView
                    android:id="@+id/chip34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/aclin_image_crop_ratio_3_4" />

                <TextView
                    android:id="@+id/chip169"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/aclin_image_crop_ratio_16_9" />

                <TextView
                    android:id="@+id/chip916"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/aclin_image_crop_ratio_9_16" />

                <TextView
                    android:id="@+id/chip00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:padding="16dp"
                    android:text="@{customRatio}" />

            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
